# yet-another-halo2-fork

./: codecov.yml  crates.js  help.html  index.html  search-index.js  settings.html  src-files.js
.github/: dependabot.yml
.github/workflows/: coverage.yml  lints-beta.yml  lints-stable.yml
halo2/: all.html  index.html
halo2_backend/: Cargo.toml  all.html  index.html  sidebar-items.js
halo2_backend/arithmetic/: fn.compute_inner_product.html  fn.eval_polynomial.html  fn.evaluate_vanishing_polynomial.html  fn.g_to_lagrange.html  fn.kate_division.html  fn.lagrange_interpolate.html  fn.parallelize.html  fn.powers.html  index.html  sidebar-items.js  trait.CurveAffine.html  trait.CurveExt.html  trait.FftGroup.html  trait.Field.html
halo2_backend/helpers/: enum.SerdeFormat.html  fn.pack.html  fn.unpack.html  index.html  sidebar-items.js  trait.CurveRead.html  trait.SerdeCurveAffine.html  trait.SerdePrimeField.html
halo2_backend/multicore/: fn.current_num_threads.html  fn.join.html  fn.scope.html  index.html  struct.Scope.html  trait.IndexedParallelIterator.html  (+6 more)
halo2_common/: Cargo.toml
halo2_frontend/: all.html  index.html  sidebar-items.js
halo2_gadgets/: Cargo.toml  all.html  index.html
halo2_middleware/: Cargo.toml  all.html  index.html  sidebar-items.js
halo2_proofs/: Cargo.toml  all.html  bench.sh  enum.SerdeFormat.html  index.html
p3_frontend/: Cargo.toml
p3_frontend/src/: air.rs  fwrap.rs  lib.rs  symbolic_builder.rs  symbolic_expression.rs  symbolic_variable.rs
p3_frontend/tests/: fib_air.rs  keccak_air.rs
p3_frontend/tests/common/: mod.rs
(+1106 files in other folders)
